--- a/client/src/Sass/config/_layout.scss
+++ b/client/src/Sass/config/_layout.scss
@@ -30,6 +30,7 @@
     text-transform: capitalize;
     border-radius: 0;
     letter-spacing: 0.8px;
+    font-family: $poppins;
     @include small-font;
     cursor: pointer;
     @include breakpoint(md) {
@@ -47,6 +48,7 @@
     width: 7.8rem;
     display: flex;
     align-items: center;
+    font-family: $poppins;
     gap: 0.2rem;
     @include smaller-font;
     @include breakpoint(md) {
