--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -26,6 +26,7 @@
 @import "components/reviewComment";
 @import "components/cart";
 @import "components/cartItem";
+@import "components/cartSubtotal";
 
 // Dashboard
 @import "../Dashboard/DashboardStyles/dashboardIndex";
