--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -27,6 +27,8 @@
 @import "components/cart";
 @import "components/cartItem";
 @import "components/cartSubtotal";
+@import "components/checkout";
+@import "components/customAccordion";
 
 // Dashboard
 @import "../Dashboard/DashboardStyles/dashboardIndex";
