--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -29,6 +29,7 @@
 @import "components/cartSubtotal";
 @import "components/checkout";
 @import "components/customAccordion";
+@import "components/shippingForm";
 
 // Dashboard
 @import "../Dashboard/DashboardStyles/dashboardIndex";
