--- a/client/src/Sass/components/_checkout.scss
+++ b/client/src/Sass/components/_checkout.scss
@@ -1,9 +1,14 @@
 .checkout__section {
   .checkout__container {
     display: grid;
-    gap: 2rem;
+    gap: 1.5rem;
 
+    @include breakpoint(md) {
+      gap: 1rem;
+      grid-template-columns: 1fr 0.5fr;
+    }
     @include breakpoint(lg) {
+      gap: 2.5rem;
       grid-template-columns: 1fr 0.5fr;
     }
     .chekout__content {
@@ -73,6 +78,10 @@
           }
         }
       }
+    }
+
+    .chekout__subtotal {
+      min-width: 300px;
     }
   }
 }
