--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -30,6 +30,7 @@
 @import "components/checkout";
 @import "components/customAccordion";
 @import "components/shippingForm";
+// @import "components/stripePayment";
 
 // Dashboard
 @import "../Dashboard/DashboardStyles/dashboardIndex";
