--- a/client/src/Sass/config/_variables.scss
+++ b/client/src/Sass/config/_variables.scss
@@ -14,10 +14,10 @@ $primary: hsl(208, 95%, 44%);
 
 $white: hsl(0, 0%, 100%);
 $white-alt: hsl(228, 14%, 93%);
-$gray: hsl(0, 0%, 76%);
+$gray: #c2c2c2;
 $dark: hsl(0, 0%, 0%);
 $dark-alt: hsl(228, 4%, 25%);
-$cyan: hsla(187, 94%, 39%, 0.993);
+$cyan: hsla(187, 94%, 39%, 0.992);
 $cyan-alt: hsl(206, 59%, 89%);
 $red: hsla(1, 82%, 49%, 0.918);
 $green: hsl(120, 94%, 34%);
