--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -18,6 +18,7 @@
 @import "components/imageHandler";
 @import "components/login&signup";
 @import "components/profile";
+@import "components/productLayout";
 @import "components/productItem";
 @import "components/product";
 @import "components/productReview";
