added rtk query, reusable component, minimize code

--- a/client/src/Dashboard/DashboardStyles/dashboardIndex.scss
+++ b/client/src/Dashboard/DashboardStyles/dashboardIndex.scss
@@ -6,4 +6,4 @@
 @import "dashboardCategories";
 @import "addProductForm";
 @import "dashboardUsers";
-@import "../../ReactTable/customTable";
+// @import "../../table/customTable";
