--- a/client/src/Sass/components/_products.scss
+++ b/client/src/Sass/components/_products.scss
@@ -26,24 +26,14 @@
         grid-template-columns: repeat(4, minmax(250px, 1fr));
       }
 
-      .products__loader {
-        width: 280px;
-        @include breakpoint(sm) {
-          width: 100%;
-        }
-        @include breakpoint(md) {
-          width: 100%;
+      .custom__alert {
+        @include breakpoint(xl) {
+          grid-column: 1 / -1;
         }
       }
     }
     .product__btn {
       margin: $x-2-5 auto auto;
-      .MuiButton-root {
-        gap: 0.5rem;
-        .MuiSvgIcon-root {
-          @include h3-font;
-        }
-      }
     }
   }
 }
