--- a/client/src/Sass/components/_product.scss
+++ b/client/src/Sass/components/_product.scss
@@ -14,7 +14,7 @@
       gap: 2.5rem;
     }
     @include breakpoint(xl) {
-      max-width: 90%;
+      // max-width: 90%;
     }
     .product__image {
       max-width: 450px;
@@ -117,7 +117,7 @@
             width: 100% !important;
             text-transform: uppercase;
             @include smaller-font;
-            gap: 0.5rem;
+            gap: 0.4rem;
           }
         }
       }
@@ -125,18 +125,18 @@
   }
 
   .product__tab {
-    max-width: 400px;
+    // max-width: 400px;
     margin: 0 auto;
     margin-top: $x-3;
 
     @include breakpoint(sm) {
-      max-width: 450px;
+      // max-width: 450px;
     }
     @include breakpoint(md) {
-      max-width: initial;
+      // max-width: initial;
     }
     @include breakpoint(xl) {
-      max-width: 90%;
+      // max-width: 90%;
     }
 
     .MuiButtonBase-root.css-1vw5i9y-MuiButtonBase-root-MuiTab-root {
