--- a/client/src/Sass/config/_layout.scss
+++ b/client/src/Sass/config/_layout.scss
@@ -21,6 +21,28 @@
   }
 }
 /*=================== REUSEABLE CLASSES ===================*/
+// ** Background white with absolute
+.bg__white {
+  position: relative;
+  padding: $x-1;
+  // margin: $x-1-75 0;
+  @include breakpoint(md) {
+    padding: $x-1-75;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    background-color: $white;
+    z-index: -1;
+    border-radius: 10px;
+    opacity: 0.6;
+  }
+}
 
 // Outline Button
 // .btn__outline {
@@ -302,23 +324,6 @@
       display: inline-block;
     }
   }
-}
-
-// Custom Loader
-.customLoader {
-  position: fixed;
-  height: calc(100% - 4rem);
-  width: calc(100% - 12rem);
-  right: 0;
-  // left: 0;
-  bottom: 0;
-  // background-color: $white-alt;
-  // background-color: gray;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 9999;
 }
 
 .MuiTypography-root {
