--- a/client/src/Sass/config/_layout.scss
+++ b/client/src/Sass/config/_layout.scss
@@ -373,6 +373,6 @@
 
 // Badge Icon
 .MuiBadge-badge {
-  background-color: $cyan !important;
-  color: $white;
+  // background-color: $cyan !important;
+  // color: $white;
 }
