--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -32,6 +32,8 @@
 @import "components/checkout";
 @import "components/customAccordion";
 @import "components/shippingForm";
+@import "components/customDropdown";
+@import "components/productListItem";
 // @import "components/stripePayment";
 
 // Dashboard
