--- a/client/src/Sass/components/_hero.scss
+++ b/client/src/Sass/components/_hero.scss
@@ -35,18 +35,18 @@
       align-self: center;
       img {
         width: 300px;
-        animation: up-down 2000ms ease-in-out infinite forwards;
+        // animation: up-down 2000ms ease-in-out infinite forwards;
         @include breakpoint(sm) {
           width: 320px;
         }
         @include breakpoint(md) {
-          width: 360px;
+          width: 380px;
         }
         @include breakpoint(lg) {
-          width: 400px;
+          width: 500px;
         }
         @include breakpoint(xl) {
-          width: 450px;
+          width: 550px;
         }
       }
     }
