--- a/client/src/Sass/config/_variables.scss
+++ b/client/src/Sass/config/_variables.scss
@@ -1,5 +1,6 @@
 /*********** Google Font ***/
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400;500;600;700;800;900;1000&display=swap");
 @import "breakpoints";
 /*********** Sass Variables ***/
 /******* Colors ***/
@@ -25,6 +26,8 @@ $green: hsl(120, 94%, 34%);
 /******* Font Family ***/
 $poppins: "Poppins", sans-serif;
 $dancing: "Dancing Script", cursive;
+$montserrat: "Montserrat", sans-serif;
+$nunito: "Nunito Sans", sans-serif;
 
 /******* Font Weight ***/
 $light: 300;
