added: table with features, reusable components, clean code..

--- a/client/src/Dashboard/DashboardStyles/_dashboardLayout.scss
+++ b/client/src/Dashboard/DashboardStyles/_dashboardLayout.scss
@@ -25,9 +25,9 @@
     }
 
     .dashboardLayout__pages {
-      padding: $x-1;
+      // padding: $x-1;
       @include breakpoint(sm) {
-        padding: $x-1-5;
+        // padding: $x-0-25;
       }
     }
   }
