--- a/client/src/Sass/components/_customDropdown.scss
+++ b/client/src/Sass/components/_customDropdown.scss
@@ -1,44 +1,39 @@
 .customDropdown {
   border: $border-gray;
   display: flex;
+  height: 100%;
   align-items: center;
-  padding-left: $x-0-75;
+  gap: 0.5rem;
+  padding: $x-0-5 $x-0-75;
   .customDropdown__title {
     font-weight: $bold;
     text-transform: uppercase;
     font-family: $nunito;
     @include smaller-font;
   }
-  .customDropdown__dropdown {
-    .customDropdown__control {
+  .custom-select {
+    select {
+      background: transparent;
+      background-image: none;
+      outline: none;
+      cursor: pointer;
+      z-index: 2;
       border: none;
-      background-color: transparent;
-      border-radius: 0;
-      .customDropdown__placeholder {
-        font-weight: $bold;
-        text-transform: uppercase;
-        font-family: $nunito;
-        @include smaller-font;
-        // opacity: 0.8;
-        color: $cyan;
-      }
-      .MuiSvgIcon-root {
-        display: block;
-        position: absolute;
-        right: 3px;
-        top: 2px;
-        font-size: 1.8rem;
-      }
-    }
-    .customDropdown__menu {
-      font-weight: $semi-bold;
+      // padding: $x-0-5 0;
+
+      font-weight: $bold;
       text-transform: uppercase;
-      font-family: $poppins;
+      font-family: $nunito;
       @include smaller-font;
-      border: none;
-      background: $white;
-      .is-selected {
-        background-color: $cyan-alt;
+      color: $cyan;
+
+      option {
+        font-weight: $medium;
+        text-transform: uppercase;
+        font-family: $poppins;
+        color: $dark;
+        @include smaller-font;
+        border: none;
       }
     }
   }
