added: table features ~ filter, sort, export, search...

--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -40,4 +40,4 @@
 @import "../dashboard/DashboardStyles/dashboardIndex";
 
 // Table
-@import "../tables/tables";
+@import "../tables/TableStyles/tableIndex";
