--- a/client/src/tables/TableStyles/_actionsButton.scss
+++ b/client/src/tables/TableStyles/_actionsButton.scss
@@ -6,14 +6,16 @@
 
   .MuiIconButton-root {
     &:nth-child(1) {
-      &:hover {
-        color: $cyan;
-      }
+      color: $cyan;
+      // &:hover {
+      //   color: $cyan;
+      // }
     }
     &:nth-child(2) {
-      &:hover {
-        color: $red;
-      }
+      color: $red;
+      // &:hover {
+      //   color: $red;
+      // }
     }
   }
 }
