--- a/client/src/tables/TableStyles/_tableLayout.scss
+++ b/client/src/tables/TableStyles/_tableLayout.scss
@@ -146,6 +146,7 @@
       }
     }
     tbody {
+      position: relative;
       tr {
         border-bottom: solid $white $x-0-25;
         @include transition(100ms);
@@ -170,23 +171,30 @@
           }
         }
       }
+
+      .loader__tr {
+        &:hover {
+          background-color: $white;
+          cursor: default;
+        }
+      }
     }
 
-    .tableLayout__loader {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      left: 0;
-      bottom: 0;
-      top: 0;
-      background-color: $white;
-      border-radius: 10px;
+    // .tableLayout__loader {
+    //   position: absolute;
+    //   width: 100%;
+    //   height: 100%;
+    //   left: 0;
+    //   bottom: 0;
+    //   top: 0;
+    //   background-color: $white;
+    //   border-radius: 10px;
 
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 99;
-    }
+    //   display: flex;
+    //   align-items: center;
+    //   justify-content: center;
+    //   z-index: 9;
+    // }
   }
 
   .tableLayout__section-footer {
@@ -211,7 +219,10 @@
     .tableLayout__footer-right {
       display: flex;
       align-items: center;
-      gap: 2rem;
+      gap: 1rem;
+      @include breakpoint(md) {
+        gap: 2rem;
+      }
       .tableLayout__listing {
         display: flex;
         align-items: center;
@@ -246,7 +257,11 @@
         font-weight: $bold;
         font-family: $nunito;
         color: $dark-alt;
+        display: none;
         @include small-font;
+        @include breakpoint(sm) {
+          display: block;
+        }
         strong {
           font-weight: $bolder;
         }
