--- a/client/src/Sass/config/_layout.scss
+++ b/client/src/Sass/config/_layout.scss
@@ -375,6 +375,14 @@
   }
 }
 
+// Stripe auto link
+
+.p-LinkAutofillPrompt {
+  .p-AnimateSinglePresence {
+    display: none !important;
+  }
+}
+
 // Badge Icon
 .MuiBadge-badge {
   // background-color: $cyan !important;
