added: orders table, invoice...

--- a/client/src/Sass/config/_layout.scss
+++ b/client/src/Sass/config/_layout.scss
@@ -243,6 +243,7 @@
 // From Options
 .form__option {
   font-weight: $medium;
+  text-transform: capitalize;
   @include smallest-font;
   color: $dark-alt;
   height: 2.2rem !important;
