--- a/client/src/tables/TableStyles/_tableLayout.scss
+++ b/client/src/tables/TableStyles/_tableLayout.scss
@@ -121,6 +121,7 @@
 
       tr {
         th {
+          white-space: nowrap;
           text-align: left;
           padding: $x-1;
           color: $dark-alt;
