--- a/client/src/Sass/config/_variables.scss
+++ b/client/src/Sass/config/_variables.scss
@@ -7,7 +7,7 @@
 $dark-500: gray;
 $dark-300: #d2d2d275;
 $dark-100: #f5f5f5;
-$warning: #ffba00;
+$warning: hsl(44, 100%, 50%);
 $info: #00efd2;
 $primary-500: hsl(208, 87%, 50%);
 $primary: hsl(208, 95%, 44%);
